---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: ????
  Bugfixes:
    - Fixed destroying a fluid (with "Prevent destruction" setting) not preserving temperature.

---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2023-09-18
  Changes:
    - Added "deletable fluids" remote interface methods: `get/set/add/remove_deletable_fluid`. This can be used instead of the "undeletable" list by mods who want to restrict all fluids except a few. The "undeletable" list will be ignored if the "deletable" list is used.

---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2023-03-11

  Changes:
    - Removed the `/undeletable-fluids-nullius-preset` command, which will now be auto-applied when Nullius is detected.

---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2022-11-23

  Changes:
    - Added "minimum threshold" setting, which allows tanks and pipes to be deleted when they only have a little amount of fluid (default: 100).

---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2022-10-13

  Features:
    - Initial release.