@@ -2,6 +2,7 @@
 Version: 1.0.4
 Date: ????
   Bugfixes:
+    - Fixed some fluids disappearing when trying to flush a fluid in a system that had multiple fluids.
     - Fixed destroying a fluid (with "Prevent destruction" setting) not preserving temperature.
 
 ---------------------------------------------------------------------------------------------------
